# codebase-rag-mcp

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SETUP_GUIDE.md  Simple Agent.json  pyproject.toml  ruff.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/commands/: gemini-invoke.toml
.github/workflows/: ci.yml  claude-review.yml  claude.yml  gemini-scheduled-triage.yml  gemini-triage.yml  release.yml
components/: directory_component.py  file_reader_component.py  file_writer_component.py  mcp_bridge_component.py  model_router_component.py
config/: .env.example  mcp_config.example.json  settings.py
docs/: gemini-setup.md
docs/plans/: 2026-03-29-general-purpose-rag.md  task.md
docs/superpowers/plans/: 2026-03-31-omni-rag-implementation.md
docs/superpowers/specs/: 2026-03-29-general-purpose-rag-mcp-design.md  2026-03-31-omni-rag-design.md  2026-04-01-cleanup-and-release-design.md
flows/: android_coding_partner.json
mcp_server/: cli.py  embeddings.py  ingestion.py  migration.py  qdrant_client.py  server.py
mcp_server/analysis/: __init__.py  overview.py  structure.py
mcp_server/change_detection/: __init__.py  base.py  file_hash_detector.py  git_detector.py
mcp_server/chunkers/: __init__.py  base.py  code_chunker.py  markdown_chunker.py  paragraph_chunker.py  recursive.py  structured_chunker.py
mcp_server/embeddings/: __init__.py  base.py  factory.py  nomic.py  ollama.py  onnx_local.py  openai.py  snowflake.py  voyage.py
mcp_server/extractors/: __init__.py  base.py  code.py  docx.py  image.py  markdown.py  pdf.py  structured_data.py  text.py
mcp_server/storage/: __init__.py  bm25_index.py  hybrid.py
mcp_server/tools/: context.py  ingest.py  search.py  stats.py  structure.py
scripts/: health_check.py  release.py  validate_flows.py
tests/: conftest.py  test_bm25.py  test_change_detection.py  test_chunkers.py  test_cli.py  test_config.py  test_embeddings.py  test_embeddings_factory.py  test_extractors.py  test_flow_validation.py  test_incremental_ingestion.py  test_ingestion.py  test_ingestion_timeout.py  test_integration.py  test_migration.py  test_overview.py  test_qdrant_client.py  test_structure.py  test_tools.py
