[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-mcp"
version = "2.0.0"
description = "MCP plugin for semantic search over any directory of files — zero-config, token-efficient"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "qdrant-client>=1.9.0",
    "requests>=2.31.0",
    "pydantic-settings>=2.0",
    "pathspec>=0.12.0",
    "onnxruntime>=1.17.0",
    "tokenizers>=0.15.0",
    "huggingface-hub>=0.20.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "responses", "ruff>=0.8.0", "mypy>=1.13.0", "pre-commit>=4.0"]

[project.scripts]
rag-mcp = "mcp_server.cli:main"
rag-mcp-setup = "mcp_server.cli:setup"

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true
disallow_untyped_defs = false
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: end-to-end tests requiring ONNX embeddings and in-memory Qdrant",
]

[tool.hatch.build.targets.wheel]
packages = ["mcp_server", "config"]
