[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omni-rag-mcp"
version = "3.0.0"
description = "General-purpose RAG MCP plugin — index anything, search with hybrid BM25+semantic, zero-config"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "qdrant-client>=1.9.0",
    "requests>=2.31.0",
    "pydantic-settings>=2.0",
    "pathspec>=0.12.0",
    "onnxruntime>=1.17.0",
    "tokenizers>=0.15.0",
    "huggingface-hub>=0.20.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "responses", "ruff>=0.8.0", "mypy>=1.13.0", "pre-commit>=4.0"]
pdf = ["pymupdf"]
docx = ["python-docx"]
image = ["pytesseract", "Pillow"]
all = ["pymupdf", "python-docx", "pytesseract", "Pillow"]

[project.scripts]
omni-rag = "mcp_server.cli:main"
omni-rag-setup = "mcp_server.cli:setup"
# Deprecated aliases
rag-mcp = "mcp_server.cli:main"
rag-mcp-setup = "mcp_server.cli:setup"

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true
disallow_untyped_defs = false
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: end-to-end tests requiring ONNX embeddings and in-memory Qdrant",
]

[tool.hatch.build.targets.wheel]
packages = ["mcp_server", "config"]
