[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omni-rag-mcp"
version = "3.0.0"
description = "General-purpose RAG MCP plugin — index anything, search with hybrid BM25+semantic, zero-config"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "qdrant-client>=1.9.0",
    "requests>=2.31.0",
    "pydantic-settings>=2.0",
    "pathspec>=0.12.0",
    "onnxruntime>=1.17.0",
    "tokenizers>=0.15.0",
    "huggingface-hub>=0.20.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "responses", "ruff>=0.8.0", "mypy>=1.13.0", "pre-commit>=4.0"]
pdf = ["pymupdf"]
docx = ["python-docx"]
image = ["pytesseract", "Pillow"]
all = ["pymupdf", "python-docx", "pytesseract", "Pillow"]

[project.urls]
Homepage = "https://github.com/Suyash2013/codebase-rag-mcp"
Repository = "https://github.com/Suyash2013/codebase-rag-mcp"
Issues = "https://github.com/Suyash2013/codebase-rag-mcp/issues"

[project.scripts]
omni-rag = "mcp_server.cli:main"
omni-rag-setup = "mcp_server.cli:setup"

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true
disallow_untyped_defs = false
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: end-to-end tests requiring ONNX embeddings and in-memory Qdrant",
]

[tool.hatch.build.targets.sdist]
exclude = [
    ".agent/",
    ".github/",
    ".idea/",
    ".claude/",
    ".worktrees/",
    ".rag-mcp/",
    "docs/plans/",
    "docs/superpowers/",
]

[tool.hatch.build.targets.wheel]
packages = ["mcp_server", "config"]
